[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iegentool"
version = "1.0.0"
authors = [
    { name = "Dan Brennan", email = "d.s.brennan@sheffield.ac.uk" }
]
description = "Tools for generating IE Model learning data"
readme = "README.md"
requires-python = ">=3.8.10"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "matplotlib >= 3.5.2",
    "networkx >= 2.6.3",
    "numpy >= 1.21.6",
    "pytz >= 2022.1"
]